Example of a page with a tree of servers
Choose XHTML 1.0 Strict. HTML 5 is perhaps a bit too recent for old
web browsers.

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,1 +1,144 @@
-It works!
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>UCL WebKeyPass</title>
+</head>
+
+<body>
+<h1>UCL WebKeyPass</h1>
+
+<div id="side_panel">
+  <ul>
+    <li>
+      Linux
+      <ul>
+        <li>
+          <a href="#">Server 1</a>
+        </li>
+        <li>
+          <a href="#">Server 2</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 3</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 4</a>
+        </li>
+        <li>
+          <a href="#">Server 5</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 6</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      Windows
+      <ul>
+        <li>
+          <a href="#">Server 1</a>
+        </li>
+        <li>
+          <a href="#">Server 2</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 3</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 4</a>
+        </li>
+        <li>
+          <a href="#">Server 5</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 6</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>
+      Solaris
+      <ul>
+        <li>
+          <a href="#">Server 1</a>
+        </li>
+        <li>
+          <a href="#">Server 2</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 3</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 4</a>
+        </li>
+        <li>
+          <a href="#">Server 5</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+            <li><a href="#">Virtual Machine C</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Server 6</a>
+          <ul>
+            <li><a href="#">Virtual Machine A</a></li>
+            <li><a href="#">Virtual Machine B</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
+
+<div id="contents">
+  <h2>Main Page</h2>
+  <p>Choose a server on the left.</p>
+</div>
+
+</body>
+</html>
