Basic CSS style

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>UCL WebKeyPass</title>
+<link href="{{ asset('bundles/uclwebkeypass/css/style.css') }}" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -13,7 +14,7 @@
       Linux
       <ul>
         <li>
-          <a href="#">Server 1</a>
+          <a href="#">Long name long name long name long name long name Server 1</a>
         </li>
         <li>
           <a href="#">Server 2</a>
