--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -10,125 +10,125 @@
 
 <div id="side_panel">
   <ul>
-    <li>
-      Linux
+    <li class="category linux">
+      <strong>Linux</strong>
       <ul>
-        <li>
+        <li class="server">
           <a href="#">Long name long name long name long name long name Server 1</a>
         </li>
-        <li>
-          <a href="#">Server 2</a>
+        <li class="server">
+          <a href="#" class="selected">Server 2</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 3</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 4</a>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 5</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 6</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
       </ul>
     </li>
-    <li>
-      Windows
+    <li class="category windows">
+      <strong>Windows</strong>
       <ul>
-        <li>
-          <a href="#">Server 1</a>
+        <li class="server">
+          <a href="#">Long name long name long name long name long name Server 1</a>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 2</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 3</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 4</a>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 5</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 6</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
       </ul>
     </li>
-    <li>
-      Solaris
+    <li class="category solaris">
+      <strong>Solaris</strong>
       <ul>
-        <li>
-          <a href="#">Server 1</a>
+        <li class="server">
+          <a href="#">Long name long name long name long name long name Server 1</a>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 2</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 3</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 4</a>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 5</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
-            <li><a href="#">Virtual Machine C</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine C</a></li>
           </ul>
         </li>
-        <li>
+        <li class="server">
           <a href="#">Server 6</a>
           <ul>
-            <li><a href="#">Virtual Machine A</a></li>
-            <li><a href="#">Virtual Machine B</a></li>
+            <li class="vm"><a href="#">Virtual Machine A</a></li>
+            <li class="vm"><a href="#">Virtual Machine B</a></li>
           </ul>
         </li>
       </ul>
