--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -137,8 +137,35 @@
 </div>
 
 <div id="contents">
-  <h2>Main Page</h2>
-  <p>Choose a server on the left.</p>
+  <h2>Main » Linux » Server 2</h2>
+  <h3>Actions</h3>
+  <ul class="actions">
+    <li><a href="#">Edit</a></li>
+    <li><a href="#">Add VM</a></li>
+    <li><a href="#">Move</a></li>
+    <li><a href="#">Remove</a></li>
+  </ul>
+  <div style="clear: both;"></div>
+
+  <h3>Information</h3>
+  <table>
+    <tr>
+      <td>Hostname</td>
+      <td>server2.sipr.ucl.ac.be</td>
+    </tr>
+    <tr>
+      <td>User/password</td>
+      <td>root: Btrn78duXl32</td>
+    </tr>
+    <tr>
+      <td>User/password</td>
+      <td>mysql: 23lXud87nrtB</td>
+    </tr>
+    <tr>
+      <td>Comment</td>
+      <td>Site web machin truc</td>
+    </tr>
+  </table>
 </div>
 
 </body>
