--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>UCL WebKeyPass</title>
+<title>UCL WebKeyPass - {% block title %}Homepage{% endblock %}</title>
 <link href="{{ asset('bundles/uclwebkeypass/css/style.css') }}" type="text/css" rel="stylesheet" />
 </head>
 
@@ -137,35 +137,24 @@
 </div>
 
 <div id="contents">
-  <h2>Main » Linux » Server 2</h2>
+  <h2>
+    Main
+    {% block h2_nodes %}
+    {% endblock %}
+  </h2>
+
   <h3>Actions</h3>
   <ul class="actions">
-    <li><a href="#">Edit</a></li>
-    <li><a href="#">Add VM</a></li>
-    <li><a href="#">Move</a></li>
-    <li><a href="#">Remove</a></li>
+    {% for action in actions %}
+      <li><a href="#">{{ action.name }}</a></li>
+    {% endfor %}
   </ul>
   <div style="clear: both;"></div>
 
   <h3>Information</h3>
-  <table>
-    <tr>
-      <td>Hostname</td>
-      <td>server2.sipr.ucl.ac.be</td>
-    </tr>
-    <tr>
-      <td>User/password</td>
-      <td>root: Btrn78duXl32</td>
-    </tr>
-    <tr>
-      <td>User/password</td>
-      <td>mysql: 23lXud87nrtB</td>
-    </tr>
-    <tr>
-      <td>Comment</td>
-      <td>Site web machin truc</td>
-    </tr>
-  </table>
+  {% block information %}
+    <p>No information</p>
+  {% endblock %}
 </div>
 
 </body>
