Add links to the path
Example of a path:
Root » Linux » Server 1 » Virtual Machine A

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
 
 <div id="contents">
   <h2>
-    Root
+    <a href="{{ path('ucl_wkp_root_view') }}">Root</a>
     {% block h2_nodes %}
     {% endblock %}
   </h2>
