Generic function for handling forms
The data of the submitted forms aren't saved to the DB. It's for a later
commit.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -43,6 +43,12 @@
     {% endfor %}
   </h2>
 
+  {% for flashMessage in app.session.flashbag.get('notice') %}
+    <div class="flash-notice">
+      {{ flashMessage }}
+    </div>
+  {% endfor %}
+
   {% block contents %}
   {% endblock %}
 </div>
