TreeView: icons always in PNG format
So the extension doesn't need to be stored in the DB, and when
displaying the list of OSes, we see "linux", "solaris", etc instead of
"linux.png", "solaris.png", etc.

--- a/Resources/views/tree_view.html.twig
+++ b/Resources/views/tree_view.html.twig
@@ -22,7 +22,7 @@
 {% for node in nodes %}
   <li class="{{ node.class }}">
     {% if node.icon %}
-      <img src="{{ asset('bundles/uclwebkeypass/icons/') }}{{ node.icon }}" alt="" />
+      <img src="{{ asset('bundles/uclwebkeypass/icons/') }}{{ node.icon }}.png" alt="" />
     {% endif %}
 
     {{ include('UCLWebKeyPassBundle::node_link.html.twig', {'node': node}) }}
