Confirm dialog for the Remove action

--- a/Resources/views/node.html.twig
+++ b/Resources/views/node.html.twig
@@ -25,7 +25,15 @@
   <h3>Actions</h3>
   <ul class="actions">
     {% for action in actions %}
-      <li><a href="{{ path(action.route, action.route_data) }}">{{ action.name }}</a></li>
+      <li>
+        <a href="{{ path(action.route, action.route_data) }}"
+          {% if action.name == 'Remove' %}
+            onclick="return confirm ('Are you sure you want to remove the item &quot;{{ title }}&quot;?')"
+          {% endif %}
+        >
+          {{ action.name }}
+        </a>
+      </li>
     {% endfor %}
   </ul>
   <div style="clear: both;"></div>
