Forms: remove submit route
The form is always sent at the same URL.

--- a/Resources/views/form.html.twig
+++ b/Resources/views/form.html.twig
@@ -24,7 +24,7 @@
 {% block contents %}
   <h3>{{ action }}</h3>
 
-  <form action="{{ path(submit_route, submit_route_data) }}" method="post" {{ form_enctype(form) }}>
+  <form action="#" method="post" {{ form_enctype(form) }}>
     {{ form_widget(form) }}
 
     <input type="submit" />
