--- a/Resources/views/path.html.twig
+++ b/Resources/views/path.html.twig
@@ -19,14 +19,7 @@
  # Author: Sébastien Wilmet
  #}
 
-{% if node.class == 'category' %}
-  <a href="{{ path('ucl_wkp_category_view', {'node_id': node.id}) }}">
-{% elseif node.class == 'server' %}
-  <a href="{{ path('ucl_wkp_server_view', {'node_id': node.id}) }}">
-{% elseif node.class == 'vm' %}
-  <a href="{{ path('ucl_wkp_vm_view', {'node_id': node.id}) }}">
-{% elseif node.class == 'misc' %}
-  <a href="{{ path('ucl_wkp_misc_view', {'node_id': node.id}) }}">
-{% endif %}
-
-    {{ node.name }}</a>
+<a href="{{ path('ucl_wkp_root_view') }}">Root</a>
+{% for node in path %}
+  » {{ include('UCLWebKeyPassBundle::node_link.html.twig', {'node': node}) }}
+{% endfor %}
