--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -40,7 +40,7 @@ h1
 #contents
 {
     position: absolute;
-    top: 3em;
+    top: 4em;
     left: 32em;
 }
 
@@ -180,4 +180,7 @@ span.login
     margin-right: 2em;
 }
 
-
+#links
+{
+    float: right;
+}
