Refactor the templates
Create page.html.twig, the parent for all pages. Children: base, login,
admin.

--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -19,16 +19,8 @@
  # Author: Sébastien Wilmet
  #}
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>UCL WebKeyPass - Admin</title>
-<link href="{{ asset('bundles/uclwebkeypass/css/style.css') }}" type="text/css" rel="stylesheet" />
-</head>
+{% extends 'UCLWebKeyPassBundle::page.html.twig' %}
 
-<body>
-<h1>UCL WebKeyPass</h1>
-
-<h2>Admin Zone</h2>
-</body>
-</html>
+{% block body %}
+  <h2>{{ title }}</h2>
+{% endblock %}
